@@ -15,7 +15,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclInt.h,v 1.127.2.112 2009/06/30 06:36:25 dgp Exp $
+ * RCS: @(#) $Id: tclInt.h,v 1.127.2.113 2009/07/01 15:12:58 dgp Exp $
  */
 
 #ifndef _TCLINT
@@ -4276,9 +4276,9 @@ MODULE_SCOPE void	TclBNInitBignumFromWideUInt(mp_int *bignum,
 #if defined(PURIFY) && defined(__clang__) && !defined(CLANG_ASSERT)
 #include <assert.h>
 #define CLANG_ASSERT(x) assert(x)
-#define Tcl_PanicEx Tcl_Panic
+#define TclPanic Tcl_Panic
 #undef Tcl_Panic
-#define Tcl_Panic(f, ...) Tcl_PanicEx(f,##__VA_ARGS__); CLANG_ASSERT(0)
+#define Tcl_Panic(f, ...) do { TclPanic(f,##__VA_ARGS__); CLANG_ASSERT(0); } while(0)
 #elif !defined(CLANG_ASSERT)
 #define CLANG_ASSERT(x)
 #endif
